add admin api
